Update HTML match

--- a/src/match.html
+++ b/src/match.html
@@ -9,11 +9,24 @@
     </head>
     <body>
         <header>
-			<h1 class='title'>KRANIO</h1>
+			<h1 class='title' style="text-align: center;">
+			KRANIO
+			</h1>
+		</div>
         </header>
+		<div id='view' class="bord col">
+			<div id='field' class="bord row">
 			
+			
+			</div>
+			<div id='hand' class="bord row">
+			
+			
+			</div>
+			
+		</div>
+		
+		
 		<button onclick="f()">BOTAO</button>
-
-        #-$
     </body>
 </html>
