--- a/src/pages/debug/debug.html
+++ b/src/pages/debug/debug.html
@@ -60,10 +60,45 @@
 
 
 			</div>
+		
+
+
+		</div>
+
+
+
+		<div class="bord col" style="min-width: 200px; margin: 10px">
+			<h3 class="jg-title"> Jogo da Velha</h3>
+			<div class="row" style="
+					width: 100%;
+					justify-content: space-evenly;
+					">
+				<div class="col" style="justify-content: center;"> 
+					
+					<div class="row"> 
+						<button class="jg" x style="margin: 15px;"> </button>
+						<button class="jg" o style="margin: 15px;"> </button>
+						<button class="jg" style="margin: 15px;"> </button>
+					</div> 
+					<div class="row"> 
+						<button class="jg" style="margin: 15px;"> </button>
+						<button class="jg" style="margin: 15px;"> </button>
+						<button class="jg" style="margin: 15px;"> </button>
+					</div> 
+					<div class="row"> 
+						<button class="jg" x style="margin: 15px;"> </button>
+						<button class="jg" o style="margin: 15px;"> </button>
+						<button class="jg" style="margin: 15px;"> </button>
+					</div> 
+				</div>
+
+
+			</div>
 
 
 
 		</div>
+
 	</div>
 </body>
 
