--- a/src/pages/atividades/atividades.html
+++ b/src/pages/atividades/atividades.html
@@ -229,6 +229,48 @@
 
 
 
+/*
+
+ATIVIDADE DE FIXAÇÃO 2
+
+Realizar as questões abaixo:
+
+1 - Faça um programa que leia 2 números inteiros, calcule e exiba a média aritmética e o produto dos números. O seu programa deve, obrigatoriamente, utilizar as seguintes funções feitas por você:
+
+calcula_media(): recebe 2 números inteiros como parâmetros e retorne a média dos números; 
+calcula_produto(): recebe 2 números inteiros como parâmetros e retorna o produto dos números;
+
+2 - Faça um programa que calcule e imprima a média ponderada de um aluno. Inicialmente, o programa deverá ler o peso da primeira prova e o peso da segunda prova (ambos inteiros). A seguir, o programa deverá ler os seguintes dados do aluno: matrícula (inteiro), nota da primeira prova e nota da segunda prova (ambas reais). Por último, o programa deve mostrar a matricula do aluno seguida da sua média. O seu programa deve, obrigatoriamente, utilizar a seguinte função feita por você:
+
+calcula_media_ponderada(): recebe 2 notas (reais) e seus respectivos pesos (inteiros) como parâmetros e retorna a média ponderada dos valores;
+
+3 - Altere o programa do exercício 2 para que ele utilize a função calcula_produto do exercício 1 no cálculo da média ponderada;
+
+4 - Altere o programa do exercício 3 para que ele processe os dados de 2 alunos ao invés de apenas 1;
+
+5 - Implemente, utilizando funções, um programa que receba do usuário o valor do salário bruto de um funcionário e imprima o valor com descontos de INSS, FGTS e Plano de Saúde. O programa deve utilizar uma função para calcular cada um dos descontos, sendo que estas funções devem receber o valor do salário bruto e retornar o valor a ser descontado. Os valores descontados devem ser:
+
+- INSS: 10% do valor bruto;
+- FGTS: 8%;
+- Plano de Saúde: R$100,00
+
+6 - Faça um programa para a leitura de duas notas parciais de um aluno. O programa deve calcular a média alcançada por aluno e apresentar:
+-> A mensagem "Aprovado", se a média alcançada for maior ou igual a sete;
+-> A mensagem "Reprovado", se a média for menor do que sete;
+-> A mensagem "Aprovado com Distinção", se a média for igual a dez.
+
+
+
+
+
+
+
+
+
+
+
+
+*/
 
 
 
