--- a/src/pages/atividades/atividades copy.html
+++ b/src/pages/atividades/atividades copy.html
@@ -44,20 +44,6 @@
 		}
 
 
-
-
-
-		.fold {
-			display: none;
-
-		}
-
-
-
-
-
-
-
 		.in {
 			border-color: var(--softBg);
 			border-style: solid;
@@ -160,7 +146,7 @@
 			</div>
 			<div class="bord"
 				style="display:flex; flex-direction: column; justify-content: center; margin-bottom: 20px;">
-				<h2> Notas:</h2>
+				<h2>Questão 1</h2>
 				<input class="in q_input q_01_input" type="number" placeholder="Nota 01" onchange="ex01_q01()"
 					onkeydown="ex01_q01()" onkeyup="ex01_q01()" />
 				<input class="in q_input q_01_input" type="number" placeholder="Nota 02" onchange="ex01_q01()"
@@ -179,7 +165,7 @@
 			</div>
 			<div class="bord"
 				style="display:flex; flex-direction: column; justify-content: center; margin-bottom: 20px;">
-				<h2> Área da <br>Circunferência:</h2>
+				<h2>Questão 2</h2>
 				<input class="in q_input q_02_input" type="number" placeholder="Raio" onchange="ex01_q02()"
 					onkeyup="ex01_q02()" onkeydown="ex01_q02()" />
 				<h4 id="resposta_ex01_q02"> Área </h4>
@@ -192,7 +178,7 @@
 			</div>
 			<div class="bord"
 				style="display:flex; flex-direction: column; justify-content: center; margin-bottom: 20px;">
-				<h2>Conversor</h2>
+				<h2>Questão 3</h2>
 				<input id="cel" class="in q_input" type="number" placeholder="Celcius" onchange="ex01_q03(true)"
 					onkeyup="ex01_q03(true)" onkeydown="ex01_q03(true)" />
 				<input id="fah" class="in q_input" type="number" placeholder="Fahrenheit" onchange="ex01_q03(false)"
@@ -207,7 +193,7 @@
 			</div>
 			<div class="bord"
 				style="display:flex; flex-direction: column; justify-content: center; margin-bottom: 20px;">
-				<h2>Informações<br>Geométricas</h2>
+				<h2>Questão 4</h2>
 				<input id="larg" class="in q_input" type="number" placeholder="Largura" onchange="ex01_q04()"
 					onkeyup="ex01_q04()" onkeydown="ex01_q04()" />
 				<input id="comp" class="in q_input" type="number" placeholder="Comprimento" onchange="ex01_q04()"
@@ -225,7 +211,7 @@
 			</div>
 			<div class="bord"
 				style="display:flex; flex-direction: column; justify-content: center; margin-bottom: 20px;">
-				<h2>Dimensões<br>Cozinha</h2>
+				<h2>Questão 5</h2>
 				<input id="input01_ex01_05" class="in q_input" type="number" placeholder="Largura"
 					onchange="ex01_q05()" onkeyup="ex01_q05()" onkeydown="ex01_q05()" />
 				<input id="input02_ex01_05" class="in q_input" type="number" placeholder="Comprimento"
