--- a/src/pages/debug/debug.html
+++ b/src/pages/debug/debug.html
@@ -10,9 +10,10 @@
 </head>
 
 <body class="bord" style="width:95%;height: ;">
-
+	
 	<div class="col">
 		<h1>API</h1>
+		<div id="out">XABLAU</div>
 		<h2>Endpoints:</h2>
 		<div class="bord col" style="min-width: 200px; margin: 10px">
 			<h3> Generate Match</h3>
