--- a/src/pages/atividades/atividade2_semHTML.html
+++ b/src/pages/atividades/atividade2_semHTML.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<style>
+	<style id="stl">
 		:root {
 			--bg: #222222;
 			--bg2: #333333;
@@ -14,7 +14,7 @@
 			--tint02: red;
 			--tint03: #00aaaa;
 			--tint04: #ff00ff;
-			--red: #ee1111;
+			--red: #aa1111;
 			--green: #11ee11;
 			
 
@@ -204,19 +204,24 @@
 
 					</tr>
 					<tr>
-						<td class="transp" style="color: var(--red);">INSS: </td>
-						<td class="transp" style="color: var(--red)"> -10% </td>
-						<td class="transp" style="color: var(--red)"> - R$0000,00</td>
+						<td class="transp tbl-td" style="color: var(--red);">INSS: </td>
+						<td class="transp tbl-td" style="color: var(--red)"> -10% </td>
+						<td class="transp tbl-td" style="color: var(--red)"> - R$0000,00</td>
 
 
 					</tr>
 					<tr>
-						<td class="transp" style="color: var(--red)">FGTS: </td>
-						<td class="transp" style="color: var(--red)">-08%</td>
-						<td class="transp"style="color: var(--red)"> - R$0000,00</td>
+						<td class="transp tbl-td" style="color: var(--red)">FGTS: </td>
+						<td class="transp tbl-td" style="color: var(--red)">-08%</td>
+						<td class="transp tbl-td"style="color: var(--red)"> - R$0000,00</td>
 					</tr>
 					<tr>
-						<td style="color: var(--red)">  </td>
+						<td class="transp tbl-td" style="color: var(--red)">Plano de Saúde: </td>
+						<td class="transp tbl-td" style="color: var(--red)"> ---- </td>
+						<td class="transp tbl-td"style="color: var(--red)"> - R$0100,00</td>
+					</tr>
+					<tr>
+						<td class="" style="color: var(--red)">  </td>
 						<td style="color: var(--red)"> </td>
 						<td style="color: var(--txt)"> +R$0000,00</td>
 					</tr>
@@ -366,8 +371,10 @@ O programa deve calcular a média alcançada por aluno e apresentar:
 -> A mensagem "Aprovado com Distinção", se a média for igual a dez.
 
 
-7 - As Organizações Tabajara resolveram dar um aumento de salário aos seus colaboradores e lhe contraram para desenvolver o programa que calculará os reajustes.
-Faça um programa que recebe o salário de um colaborador e o reajuste segundo o seguinte critério, baseado no salário atual:
+7 - As Organizações Tabajara resolveram dar um aumento de salário aos seus colaboradores
+e lhe contraram para desenvolver o programa que calculará os reajustes.
+Faça um programa que recebe o salário de um colaborador e o reajuste segundo 
+o seguinte critério, baseado no salário atual:
 
 
 - salários até R$ 280,00 (incluindo) : aumento de 20%
@@ -397,6 +404,23 @@ Desconto do IR:
 
 	
 	*/
+	f('bg','#000055');
+	f('txt','#fff0ff');
+	
+	function f(varname,col){
+		let d = document.getElementById('stl')
+		let r = d.textContent;
+		let R = r.split('--'+varname+':')
+		let i = 0;
+		for(i=0; i<R[1].length&& R[1][i]!=';';i++);
+		R[1] = R[1].substring(i);
+
+		//console.log('\n			--bg:'+col+R[1]);
+		d.innerHTML = R[0]+'\n			'+'--'+varname+':'+col+R[1];
+		console.log(d.innerHTML)
+		
+	}
+
 </script>
 
 </html>
