--- a/src/pages/atividades/atividade2_semHTML.html
+++ b/src/pages/atividades/atividade2_semHTML.html
@@ -16,7 +16,7 @@
 			--tint04: #ff00ff;
 			--red: #aa1111;
 			--green: #11ee11;
-			
+
 
 		}
 
@@ -154,12 +154,29 @@
 		.out {
 			background-color: #999999;
 		}
-		.tbl{
-			background-color: #aabbcc00;
 
-		}
-		.transp{
+		td {
 			background-color: #aabbcc00;
+			border-radius: 3px;
+			border: 2px solid;
+			margin-left: auto;
+
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		.transp {
+			background-color: #aabbcc00;
+		}
+
+		.hcent {
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		.vcent {
+			margin-top: auto;
+			margin-bottom: auto;
 		}
 	</style>
 
@@ -197,8 +214,13 @@
 					<tr>
 						<td class="transp">Salário Bruto: </td>
 						<td> </td>
-						<td>   
-							<input class="in" type="number" style=" max-width: 100px;"> </input>
+						<td>
+							<input id="input01_e02_q05" class="in hcent" type="number" style=" max-width: 100px;"
+								placeholder="  Salário bruto" 
+								onchange="ex02_q05()"
+								onkeydown="ex02_q05()"
+								onkeyup="ex02_q05()"
+								onkeypress="ex02_q05()"> </input>
 
 						</td>
 
@@ -206,24 +228,24 @@
 					<tr>
 						<td class="transp tbl-td" style="color: var(--red);">INSS: </td>
 						<td class="transp tbl-td" style="color: var(--red)"> -10% </td>
-						<td class="transp tbl-td" style="color: var(--red)"> - R$0000,00</td>
+						<td id="output01_e02_q05" class="transp tbl-td" style="color: var(--red)"> - R$0000,00</td>
 
 
 					</tr>
 					<tr>
 						<td class="transp tbl-td" style="color: var(--red)">FGTS: </td>
 						<td class="transp tbl-td" style="color: var(--red)">-08%</td>
-						<td class="transp tbl-td"style="color: var(--red)"> - R$0000,00</td>
+						<td id="output02_e02_q05" class="transp tbl-td" style="color: var(--red)"> - R$0000,00</td>
 					</tr>
 					<tr>
 						<td class="transp tbl-td" style="color: var(--red)">Plano de Saúde: </td>
-						<td class="transp tbl-td" style="color: var(--red)"> ---- </td>
-						<td class="transp tbl-td"style="color: var(--red)"> - R$0100,00</td>
+						<td id="output03_e02_q05" class="transp tbl-td" style="color: var(--red)"> ---- </td>
+						<td class="transp tbl-td" style="color: var(--red)"> - R$0100,00</td>
 					</tr>
 					<tr>
-						<td class="" style="color: var(--red)">  </td>
+						<td class="" style="color: var(--red)"> </td>
 						<td style="color: var(--red)"> </td>
-						<td style="color: var(--txt)"> +R$0000,00</td>
+						<td id="output04_e02_q05" style="color: var(--txt)"> +R$0000,00</td>
 					</tr>
 					<tr>
 					</tr>
@@ -308,8 +330,23 @@
 		}
 		document.getElementById('output_area_ex02_q02').innerHTML = r;
 	}
-	function ex02_q022() {}
+	function ex02_q022() { }
 
+	function ex02_q05() {
+		console.log('1');
+		let salario_bruto = +document.getElementById('input01_e02_q05').value;
+		//salario_bruto = (isNaN(input01_e02_q05))?0:salario_bruto;
+		
+		const x = 10;
+		const y = 8;
+		const z = 
+		//1 x% (x=10)
+		//2 y% (y=8)
+		//3 z% (100 reais)
+		//4 restante (100-x-y %)
+
+		//input01_e02_q05
+	}
 
 	/*
 	2 - Faça um programa que calcule e imprima a média ponderada de um aluno.
@@ -404,21 +441,21 @@ Desconto do IR:
 
 	
 	*/
-	f('bg','#000055');
-	f('txt','#fff0ff');
-	
-	function f(varname,col){
+	f('bg', '#111111');
+	f('txt', '#eeeeee');
+
+	function f(varname, col) {
 		let d = document.getElementById('stl')
 		let r = d.textContent;
-		let R = r.split('--'+varname+':')
+		let R = r.split('--' + varname + ':')
 		let i = 0;
-		for(i=0; i<R[1].length&& R[1][i]!=';';i++);
+		for (i = 0; i < R[1].length && R[1][i] != ';'; i++);
 		R[1] = R[1].substring(i);
 
 		//console.log('\n			--bg:'+col+R[1]);
-		d.innerHTML = R[0]+'\n			'+'--'+varname+':'+col+R[1];
-		console.log(d.innerHTML)
-		
+		d.innerHTML = R[0] + '\n			' + '--' + varname + ':' + col + R[1];
+		//console.log(d.innerHTML)
+
 	}
 
 </script>
