--- a/src/pages/atividades/atividade2_semHTML.html
+++ b/src/pages/atividades/atividade2_semHTML.html
@@ -180,6 +180,12 @@
 			margin-top: auto;
 			margin-bottom: auto;
 		}
+
+		.lrg {
+			width: 200px;
+			padding: 5px;
+
+		}
 	</style>
 
 	<meta charset="UTF-8" />
@@ -194,14 +200,14 @@
 		<h1>Atividades</h1>
 		<button class="btn item qBtn" onclick="ex02_q01()">
 			<h2>Questão 1</h2>
-			<h4 id="output01_ex02_q01">Média</h4>
-			<h4 id="output02_ex02_q01">Produto</h4>
+			<h4 class="bord lrg" id="output01_ex02_q01">Média</h4>
+			<h4 class="bord lrg" id="output02_ex02_q01">Produto</h4>
 
 		</button>
 
 		<button id="output_area_ex02_q02" class="btn item qBtn" onclick="ex02_q02()">
 			<h2>Questão 2</h2>
-			<h4>Média Ponderada</h4>
+			<h4 class="bord lrg">Média Ponderada</h4>
 		</button>
 		<button id="output_area_ex02_q02" class="item qBtn">
 			<h2>Questão 3</h2>
@@ -275,8 +281,11 @@
 
 			<input id="input01_e02_q07" class="in hcent" type="number" style=" max-width: 100px;" placeholder=" Salário"
 				onchange="ex02_q07()" onkeydown="ex02_q07()" onkeyup="ex02_q07()" onkeypress="ex02_q06()"> </input>
-
+			
 		</button>
+
+		
+
 
 	</div>
 
@@ -469,27 +478,35 @@
 	function ex02_q07() {
 		let salario = +document.getElementById('input01_e02_q07').value;
 		let r = 0;
-		let p = 1.2;
+		let p = 1.20;
 		if (salario <= 280) p = 1.2;
 		if (salario > 280) p = 1.15;
 		if (salario > 700) p = 1.1;
 		if (salario >= 1500) p = 1.05;
 		r = salario * p;
-		document.getElementById('output02_e02_q07').textContent = 'Salário reajustado \n(aumento de ' + mask_number('%2.3f',(p-1)*100) + '%): ' + r;
+		document.getElementById('output02_e02_q07').textContent = 'Salário reajustado \n(aumento de ' + mask_number('%2.1f', (p * 100 - 100)) + '%): ' + r;
 
+	}
+	function ex02_q08() {
+		alert('no answer');
 	}
 
 	/*
-	7 - As Organizações Tabajara resolveram dar um aumento de salário aos seus colaboradores
-e lhe contraram para desenvolver o programa que calculará os reajustes.
-Faça um programa que recebe o salário de um colaborador e o reajuste segundo 
-o seguinte critério, baseado no salário atual:
+	8 - Faça um programa para o cálculo de uma folha de pagamento,
+	 sabendo que os descontos são do Imposto de Renda, que depende do salário bruto 
+	 (conforme tabela abaixo) e 
+	 3% para o Sindicato e que o FGTS corresponde a 11% do Salário Bruto,
+	 mas não é descontado (é a empresa que deposita).
+	 O Salário Líquido corresponde ao Salário Bruto menos os descontos.
+	 O programa deverá pedir ao usuário o valor da sua hora e a 
+	 quantidade de horas trabalhadas no mês.
+	Desconto do IR:
 
+- Salário Bruto até 900 (inclusive) - isento;
+- Salário Bruto até 1500 (inclusive) - desconto de 5%;
+- Salário Bruto até 2500 (inclusive) - desconto de 10%;
+- Salário Bruto acima de 2500 - desconto de 20% Imprima na tela as informações, dispostas conforme o exemplo abaixo. No exemplo o valor da hora é 5 e a quantidade de hora é 220.
 
-- salários até R$ 280,00 (incluindo) : aumento de 20%
-- salários entre R$ 280,00 e R$ 700,00 : aumento de 15%
-- salários entre R$ 700,00 e R$ 1500,00 : aumento de 10%
-- salários de R$ 1500,00 em diante : aumento de 5%
 	
 	*/
 
